Added Documentation to testing_modes, added X_ZOOM flag in config file

--- a/grating_test_default.config
+++ b/grating_test_default.config
@@ -39,6 +39,8 @@ HOME_POS_ANGLE = -14.8
 #home_pos_steps - Defines "home" in terms of steps.  (should probably always be 0)
 HOME_POS_STEPS = 0
 
+#x_zoom
+X_ZOOM = TRUE
 
 
 #Monochromator Settings
